# gridtokenx-meter-service

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TESTING.md
.github/workflows/: ci.yml
crates/meter-api/: Cargo.toml
crates/meter-api/src/: handlers.rs  lib.rs  middleware.rs  state.rs
crates/meter-api/src/handlers/: meter.rs  system.rs
crates/meter-api/src/middleware/: auth.rs
crates/meter-core/: Cargo.toml
crates/meter-core/src/: config.rs  domain.rs  error.rs  lib.rs  traits.rs
crates/meter-core/src/domain/: meter.rs
crates/meter-logic/: Cargo.toml
crates/meter-logic/src/: lib.rs  meter_service.rs
crates/meter-persistence/: Cargo.toml
crates/meter-persistence/src/: lib.rs  repository.rs
crates/meter-persistence/src/infra/: mint.rs  mod.rs
crates/meter-persistence/src/repository/: meter.rs
