[workspace]
resolver = "2"
members = [
    "crates/meter-core",
    "crates/meter-persistence",
    "crates/meter-logic",
    "crates/meter-api",
    "bin/meter-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[workspace.dependencies]
# Internal Crates
meter-core = { path = "crates/meter-core" }
meter-persistence = { path = "crates/meter-persistence" }
meter-logic = { path = "crates/meter-logic" }
meter-api = { path = "crates/meter-api" }

# External Dependencies
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
async-nats = "0.37"
futures = "0.3"

[profile.release]
opt-level = 2
