[package]
name = "meter-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
sqlx.workspace = true
tracing.workspace = true
dotenvy.workspace = true
