[package]
name = "meter-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
sqlx.workspace = true
tracing.workspace = true

[dev-dependencies]
# Async test runtime for IntoResponse body assertions (axum::body::to_bytes).
tokio.workspace = true
